criado bottao Seguir Deixar de seguir

--- a/v02/peNoChao/views/perfilJogadorPerfil.ejs
+++ b/v02/peNoChao/views/perfilJogadorPerfil.ejs
@@ -25,13 +25,29 @@
           <!-- <h5 class="text-center">Estatísticas</h5> -->
       </div>
     </div>
-    <form action="/perfilJogador/seguir" method="post">
+    <% let resultado = seguidor.find( element => element.seguidor_id == jogador.id) %> 
+    <% console.log("++++++++++++",resultado) %> 
+    <% if(!resultado){%>
+      <form action="/perfilJogador/seguir" method="post">
+        <div class="row justify-content-center mb-3">
+          <input type="hidden" name="idPerfilJogador" id="" value="<%=jogador.id%>">
+          <button class="col-9 btn-form m-0 d-flex justify-content-center" >
+            <p class="text-center mt-2 mb-2" >Seguir</p>
+          </button>
+        </div>
+      </form>
+    
+
+   <% } else { %> 
+    <form action=/perfilJogador/deixarseguir/ method="POST">
     <div class="row justify-content-center mb-3">
-      <input type="hidden" name="idPerfilJogador" id="" value="<%=jogador.id%>">
+      <input type="hidden" name="idTabelaSeguidor" id="" value="<%=resultado.id%>">
+      <input type="hidden" name="perfilJogador" id="" value="<%=jogador.id%>">
       <button class="col-9 btn-form m-0 d-flex justify-content-center" >
-        <p class="text-center mt-2 mb-2" >Seguir</p>
+        <p class="text-center mt-2 mb-2" >Deixar de Seguir</p>
       </button>
     </div>
   </form>
+<% } %> 
     </div>
   </div>
