pagin perfil jogador e not found padrão

--- a/v02/peNoChao/views/perfilJogador.ejs
+++ b/v02/peNoChao/views/perfilJogador.ejs
@@ -17,7 +17,7 @@
             
   <%- include('perfilJogadorPerfil') %>
       <%- include('perfilJogadorFeed') %>
-      <%- include('atletaResultados') %>  
+      <%- include('perfilJogadorResultados') %>  
 
     </div>
   </main>
