--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -32,34 +32,36 @@
     <!-- verifica se tem alguma postagem se ao tiver nao entra na condicao-->
     <% publications.reverse(); publications.forEach(publication => { %>
     <!-- pela array puplication passa pelo reverse() para trocar orgem do arry antes de passar para forEach-->
-    <div class="row mx-2 my-2 bg-white mb-4 rounded-penochao">
+    <div class="row m-0 my-2 bg-white mb-4 rounded-penochao">
       <div class="col-12 ">
 
         <!-- Inicio parte inferior  do time line -->
 
         <div class="d-flex-in my-3">
           <div class="d-flex">
-            <div class="d-flex">
-              <a href="/perfilJogador/<%=publication.Jogador.id%>">
-                <img src="/images/midias/<%=publication.Jogador.path%>" class="rounded-circle" width="30px" height="30px"
-                  alt="Foto perfil"></a>
+            <div class="d-flex align-items-center">
+              <a href="/perfilJogador/<%=publication.Jogador.id%>" class="rounded-circle img-header-card">
+                </a>
             </div>
 
-            <div class=" d-flex-column align-items-center col-sm-6">
+            <div class=" d-flex-column align-items-center col-sm-6 pl-2">
               <a href="">
-                <h6 class="text-1 my-1"><%=publication.Jogador.nome%></h6>
+                <h6 class="text-1 my-1 titulo-header-card"><%=publication.Jogador.nome%></h6>
               </a>
-              
+              <!-- usei o moment para formatar data que foi postada foto  -->
+              <h6 class="text-1 titulo-header-data"> <%= moment(publication.create_at).format('DD/MM/YYYY') %></h6>
             </div>
-
-            <div class=" ml-auto">
+            
+            <!--
+              <div class=" ml-auto">
               <button class="d-button" type="submit">
                 <h6 class=" text-1">Deixar de seguir</h6>
               </button>
             </div>
+            -->
 
           </div>
-          <div class="text-lowercase">
+          <div class="mt-2">
           <p><%=publication.descricao%></p> 
           </div>
           <!--  Inicio conteudo centro container -->
@@ -86,10 +88,6 @@
             </div>
             <div class="   ml-2 ">
               <h6 class=".d_text-1"><%=publication.Comentarios.length%></h6>
-            </div>
-            <div class="  ml-2 ">
-              <!-- usei o moment para formatar data que foi postada foto  -->
-              <h6 class="text-1"> <%= moment(publication.create_at).format('DD/MM/YYYY') %></h6>
             </div>
           </div>
           <!-- Fim imagens para curtir pagina -->
