Arrumando nome do jogar ao mostrar seu time na pagina perfil

--- a/v02/peNoChao/views/perfilJogadorResultados.ejs
+++ b/v02/peNoChao/views/perfilJogadorResultados.ejs
@@ -11,8 +11,8 @@
   <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4 <%= oculta %>">
     <a href="/time/exibir/<%= meuTime.id %>">
     <div class="mt-2">
-      <h5 class="text-center" style="color:black">Meu Time</h5>
-
+      <% jogador.nome = jogador.nome.split(" ") %>
+      <h5 class="text-center" style="color:black"><%= jogador.nome[0] %> joga no time</h5>
     </div>
     <!--Divi das escudo do meu Time-->
     <div class="row mt-3">
