editado titulo de seguidores

--- a/v02/peNoChao/views/perfilJogadorResultados.ejs
+++ b/v02/peNoChao/views/perfilJogadorResultados.ejs
@@ -31,9 +31,9 @@
 <!--Div do grado dos jogadores destaque-->
   <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
     <div class="mt-2">
-      <h5 class="text-center">Jogadores</h5>
+      <h5 class="text-center">Seguidores</h5>
     </div>
-    <!--Divi das fotos dos jogadores-->
+    <!--Divi das fotos dos Seguidores-->
     <div class="row mt-3">
       <% for(let x of jogadores) { %>
         <% if (x.id!=jogador.id){ %>
