--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -41,6 +41,37 @@
   </a>
   </div>
   
+ <!-- Div dos jogadores seguidos  -->
+ <% if(perfilSeguido != "" ) {%> 
+ <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
+
+  <div class="mt-2">
+    <h5 class="text-center">Seguindo</h5>
+  </div>
+  <!--Divi das fotos dos jogadores-->
+  <div class="row mt-3">
+    <% perfilSeguido.forEach(seguido => { %>
+      
+    <div class="col-sm-4 justify-content-center mb-2">
+      <div class="row justify-content-center">
+        <img src="/images/midias/<%=seguido.Jogador.path%>"  width="50vw" class="rounded-circle foto-perfil-jogadores">
+      </div>
+
+      <div class="row justify-content-center">
+        <a href="/perfilJogador/<%=seguido.Jogador.id%>">
+          <% nomeJogador = seguido.Jogador.nome.split(" ") %>
+          <%= nomeJogador[0] %>
+        </a>
+      </div>
+    </div>
+   
+    <% }); %>
+  </div>
+  
+</div>
+<% } %>
+ 
+
 <!--Div do grado dos jogadores destaque-->
   <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
     <div class="mt-2">
@@ -121,6 +152,8 @@
       -->
     </div>
   </div>
+
+ 
 
 <!--Div do grado dos jogadores destaque-->
 <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
