--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -79,6 +79,14 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+.img-header-card2{
+    
+    width: 35px;
+    height: 35px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 button:focus{
     outline: none;
 }
