--- a/v02/peNoChao/views/jogos.ejs
+++ b/v02/peNoChao/views/jogos.ejs
@@ -25,6 +25,29 @@
               </div>
             </div>
           </div>
+
+          <div class=" container col-md-6 ">
+            <div class="form-row">
+                <div class="form-group col-md-5">
+                  <label for="inputCity">Time da Casa:</label>
+                  <input type="text" class="form-control" id="inputCity" value="<%= timeDaCasa.nome %>" readonly>
+                </div>
+                
+                <div class="col-md-1 form-group align-self-end text-center">
+                    X
+                  </div>
+                <div class="form-group col-md-6">
+                  <label for="inputState">Adversário</label>
+                  <select id="inputState" class="form-control">
+                    <option selected>Escolha...</option>
+                    <% times.forEach(time => { %>
+                        <option name="<%= time.id %>" id="<%= time.id %>"><%= time.nome %></option>
+                    <% }); %>
+                        
+                  </select>
+                </div>
+          </div>
+        </div>
    
     <div class="container col-md-6  my-5 ">
 
