Removido barra de pesquisa view times

--- a/v02/peNoChao/views/times.ejs
+++ b/v02/peNoChao/views/times.ejs
@@ -10,18 +10,13 @@
 <body>
 
 <!-- Header Logada-->
-<%- include('partials/headerCadastro') %>
+<%- include('partials/headerPerfilJogador') %> 
+
 
 <main class="container">
       <div class="d-flex justify-content-center p-0 col-12 " >
     <div class="  col-12 col-sm-6 my-3  p-0"   > 
-        <div class="input-group ">
-          <input class="form-control " type="search" placeholder="Pesquisar" aria-label="Search" >
-          <div class="input-group-append">
-            <div class="input-group-text" >
-                <img src="/images/pesquisa.png" alt="Icon Pesquisa">
-            </div>
-          </div>
+        
         </div>
       </div>
     </div>
