--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -108,8 +108,8 @@
                        </a>
                       </div>
                       <div class=" row d-flex aligin-items-center justify-content-between alinhamento-centro">
-                         <p class="col-9 m-0"><%=comentario.descricao%></p> 
-                         <p class="col-3 m-0 pl-0 date-comentario"><%=moment(comentario.create_at).format('DD/MM/YY')%></p>
+                         <p class="col-10 m-0 quebra-linha mb-3"><%=comentario.descricao%></p> 
+                         <p class="col-2 m-0 pl-0 date-comentario"><%=moment(comentario.create_at).format('DD/MM/YY')%></p>
                       </div>
                    <% } %>
               <% } %>
