colocar cor borao deixar de seguir cor red

--- a/v02/peNoChao/views/perfilJogadorResultados.ejs
+++ b/v02/peNoChao/views/perfilJogadorResultados.ejs
@@ -22,7 +22,7 @@
     </div>
     <div class="row mt-2">
       <div class="col d-flex justify-content-center">
-        <a href="/times" style="color:black"> <%= meuTime.nome %> </a>
+        <a href="/time/exibir/<%= meuTime.id %>" style="color:black"> <%= meuTime.nome %> </a>
       </div>
     </div>
   </a>
