Correção de borda em perfil jogador

--- a/v02/peNoChao/views/perfilJogadorPerfil.ejs
+++ b/v02/peNoChao/views/perfilJogadorPerfil.ejs
@@ -1,6 +1,7 @@
  <!-- Início da coluna do Perfil -->
- <div class="col-sm-3 border rounded-top-penochao rounded-bottom-penochao">
-  <div class="row">
+ <div class="col-sm-3 ">
+  <div class="border rounded-top-penochao rounded-bottom-penochao">
+  <div class="row m-0">
       <div class="col d-flex justify-content-center p-0">
           <!-- Banner Profile-->
           <div>
@@ -50,4 +51,5 @@
   </form>
 <% } %> 
     </div>
+  </div>
   </div>
