Comentado console.log

--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -106,7 +106,7 @@
   </div>
   <!--Divi das fotos dos jogadores-->
   <div class="row mt-3">
-    <% console.log(times) %>
+    <%# console.log(times) %>
     <% if(times != undefined) { for(let x of times) { let file = x.MidiasTimes[0].path; %>
     <%# for(let x of jogadores) { %>
     <%# if (x.id!=jogador.id){ %>
