--- a/v02/peNoChao/views/perfilJogadorFeed.ejs
+++ b/v02/peNoChao/views/perfilJogadorFeed.ejs
@@ -7,107 +7,120 @@
     <% if (publication.jogadores_id == jogador.id) { %>
 
     <!-- pela array puplication passa pelo reverse() para trocar orgem do arry antes de passar para forEach-->
-    <div class="row mx-2 my-2 bg-white mb-4 rounded-penochao">
-      <div class="col-12 ">
+    <div class="row m-0 my-2 bg-white mb-4 rounded-penochao" id="publicacao-<%=publication.path%>">
+      <div class="col-12 p-0  ">
+        <div class="col p-0">
+          <!-- Inicio parte inferior  do time line -->
 
-        <!-- Inicio parte inferior  do time line -->
-
-        <div class="d-flex-in my-3">
+        <div class="d-flex-in px-3 my-3">
           <div class="d-flex">
-            <div class="d-flex">
-              <a href="/perfilJogador/<%=publication.Jogador.id%>">
-                <img src="/images/midias/<%=publication.Jogador.path%>" class="rounded-circle" width="30px"
-                  height="30px" alt="Foto perfil"></a>
-            </div>
-
-            <div class=" d-flex-column align-items-center col-sm-6">
-              <a href="">
-                <h6 class="text-1 my-1"><%=publication.Jogador.nome%></h6>
+            <div class="d-flex align-items-center">
+              <a href="/perfilJogador/<%=publication.Jogador.id%>" class="rounded-circle img-header-card" style="background-image: url('/images/midias/<%=publication.Jogador.path%>');">
               </a>
-              
             </div>
 
-            <div class=" ml-auto">
+            <div class=" d-flex-column align-items-center col-sm-6 pl-2">
+              <a href="">
+                <h6 class="text-1 my-1 titulo-header-card"><%=publication.Jogador.nome%></h6>
+              </a>
+              <!-- usei o moment para formatar data que foi postada foto  -->
+            <h6 class="text-1 titulo-header-data"> <%= moment(publication.create_at).format('DD/MM/YYYY') %></h6>
+            </div>
+            <!--
+              <div class=" ml-auto">
               <button class="d-button" type="submit">
                 <h6 class=" text-1">Deixar de seguir</h6>
               </button>
             </div>
+            -->
 
           </div>
-          <div class="text-lowercase">
+          <div class="mt-2">
             <p><%=publication.descricao%></p>
           </div>
           <!--  Inicio conteudo centro container -->
-          <div class="d-flex justify-content-center p-3">
-            <a href="#"><img src="/images/midias/<%=publication.path%>" class="card-img " alt="Foto Post"></a>
+          <form action="/perfilJogador/like" id="form-curtir-<%=publication.path%>" method="POST">
+          <div class="d-flex justify-content-center p-0">
+            <% let extensao = publication.path.includes('.mp4'); %>
+            <% if(extensao) {%>   
+              <video controls="" class="col-12">
+  
+                <source src="/images/midias/<%=publication.path%>" type="video/mp4">
+                Seu navegador não suporta o elemento <code>video</code>.
+              </video>
+            <% } else {%>
+            <a class="postagem" style="background-image: url('/images/midias/<%=publication.path%>');" href="#publicacao-<%=publication.id%>" onclick="document.getElementById('form-curtir-<%=publication.id%>').submit();" ></a>
+            <% } %>
           </div>
           <!--  fim conteudo centro container -->
           <!-- Inicio imagens para curtir pagina -->
-          <div class="d-flex  justify-content-end">
+          <div class="d-flex mt-2 justify-content-end align-items-center">
             <div>
               <!-- botao da imagem  -->
-              <form action="/perfilJogador/like" method="POST">
+              
                 <input type="hidden" name="postagens_id" id="postagens_id" value="<%=publication.id%>">
                 <input type="hidden" name="jogador_id" id="jogador_id" value="<%=jogador.id%>">
                 <input type="hidden" name="perfilJogador" id="perfilJogador" value="<%=jogador.id %>">
-                <button class="d-button" type="submit"> <i class="fas fa-futbol ml-3 "> </i></button>
+                <button class="d-button p-0" type="submit"> <i class="fas fa-futbol ml-3 "> </i></button>
               </form>
 
             </div>
             <div class=" ml-2">
-              <h6 class=".d_text1"><%=publication.Curtidas.length%> </h6>
+              <h6 class=".d_text1 m-0 contadorGol"><%=publication.Curtidas.length%> </h6>
             </div>
             <div>
-              <button class="d-button"> <i class="far fa-comment ml-2"> </i></button>
+              <button class="d-button p-0 ml-2"> <i class="far fa-comment ml-2"> </i></button>
             </div>
             <div class=" ml-2 ">
-              <h6 class=".d_text-1"><%=publication.Comentarios.length%></h6>
-            </div>
-            <div class="  ml-2 ">
-              <!-- usei o moment para formatar data que foi postada foto  -->
-              <h6 class="text-1"> <%= moment(publication.create_at).format('DD/MM/YYYY') %></h6>
+              <h6 class=".d_text-1 m-0 contadorGol"><%=publication.Comentarios.length%></h6>
             </div>
           </div>
+       
           <!-- Fim imagens para curtir pagina -->
           <!-- Inicio comentarios  -->
-          <div class="d-flex  ml-2 ">
-            <div class="d-flex-column ">
-              <div class="d-flex-column">
+          <div class="d-flex ">
+            <div class="d-flex col-12 p-0 ">
+              <div class="col-12 p-0">
                 <% if (comentarios) { %>
                 <!-- verifica se tem alguma postagem se ao tiver nao entra na condicao-->
                 <% for(let comentario of comentarios ) { %>
                 <% if (comentario.postagens_id == publication.id) { %>
-                <div class="d-flex row ">
-                  <a href="/perfilJogador/<%=comentario.Jogador.id%>">
-                    <img src="/images/midias/<%=comentario.Jogador.path%>" class="rounded-circle" width="30px"
-                      height="30px" alt="Foto Perfil">
+                <div class="d-flex col-12 p-0 align-content-center mb-2">
+                  <a href="/perfilJogador/<%=comentario.Jogador.id%>" class="rounded-circle img-header-card2" style="background-image: url('/images/midias/<%=comentario.Jogador.path%>');">
+                    
                   </a>
-                  <a href="/perfilJogador/<%=comentario.Jogador.id%>">
-                    <h6 class=" m-1 y-5 text-1"><%=comentario.Jogador.nome%></h6>
+                  <a class="ml-2 align-self-center" href="/perfilJogador/<%=comentario.Jogador.id%>">
+                    <h6 class=" title-comentario text-1"><%=comentario.Jogador.nome%></h6>
                   </a>
                 </div>
-                <div class=" d-flex text-lowercase column   y-5">
-                  <p><%=comentario.descricao%></p>
-                  <p class="text-2 y-5"><%=moment(comentario.create_at).format('DD/MM/YY')%></p>
+                <div class="  row d-flex aligin-items-center justify-content-between alinhamento-centro">
+                  <p class="col-10 m-0 quebra-linha mb-3"><%=comentario.descricao%></p>
+                  <p class="col-2 m-0 pl-0 date-comentario"><%=moment(comentario.create_at).format('DD/MM/YY')%></p>
                 </div>
                 <% } %>
               <% } %>
             <% } %>
-
-                <form action="/perfilJogador/comentario" method="POST">
-                  <!-- rota so para gravar comentarios no banco de dados  -->
-                  <div class="postClass">
-                    <!-- usei o hidden para passar id post //id jogador// para ser gravado banco de dados   -->
-                    <input type="hidden" name="postagens_id" id="postagens_id" value="<%=publication.id%>">
-                    <input type="hidden" name="jogador_id" id="jogador_id" value="<%=jogadorLogado.id%>">
-                    <input type="hidden" name="perfilJogador" id="perfilJogador" value="<%=jogador.id %>">
-                    <input class="form-control" type="text" name="descricao" placeholder="Deixe seu comentario "
-                      id="descricao"  required> </input>
-                  </div>
-                </form>
+        </div>
+          
               </div>
             </div>
           </div>
+             <hr class="m-0">
+        <form action="/perfilJogador/comentario" id="form-comentario" method="POST">
+          <!-- rota so para gravar comentarios no banco de dados  -->
+          <div class="postClass d-flex justify-content-around">
+            <!-- usei o hidden para passar id post //id jogador// para ser gravado banco de dados   -->
+            <input type="hidden" name="postagens_id" id="postagens_id" value="<%=publication.id%>">
+            <input type="hidden" name="jogador_id" id="jogador_id" value="<%=jogadorLogado.id%>">
+            <input type="hidden" name="perfilJogador" id="perfilJogador" value="<%=jogador.id %>">
+            <input class="form-control comentario-form mt-2 mb-2" type="text" name="descricao" placeholder="Deixe seu comentário "
+              id="descricao"  required> </input>
+              <button onclick="document.getElementById('form-comentario-<%=publication.id%>').submit();" type="submit" class="btn-comentario">
+                <img src="/images/Enviar.png" alt="Enviar Comentário" id="enviar">
+              </button>
+          </div>
+          
+        </form>
           <!-- Fim comentarios  -->
         </div>
       </div>
