--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -99,7 +99,7 @@
 
  
 
-<!--Div do grado dos jogadores destaque-->
+<!--Div do grado dos times destaque-->
 <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
   <div class="mt-2 text-center">
     <h5 class="text-center-titulo">Times</h5>
