--- a/v02/peNoChao/views/perfilJogadorResultados.ejs
+++ b/v02/peNoChao/views/perfilJogadorResultados.ejs
@@ -28,25 +28,23 @@
   </a>
   </div>
   
-<!--Div do grado dos jogadores destaque-->
-<% if(perfilSeguido != "" ) {%> 
+ <!-- Div dos jogadores seguidos  -->
+ <% if(perfilSeguido != "" ) {%> 
   <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
  
-   <div class="mt-2">
-  
-     <h5 class="text-center">Seguindo</h5>
+   <div class="mt-2 text-center">
+     <h5 class="text-center-titulo">Seguindo</h5>
    </div>
    <!--Divi das fotos dos jogadores-->
-   <div class="row mt-3">
+   <div class="row mt-3 justify-content-around">
      <% perfilSeguido.forEach(seguido => { %>
        
-     <div class="col-sm-4 justify-content-center mb-2">
-       <div class="row justify-content-center">
-         <img src="/images/midias/<%=seguido.Jogador.path%>"  width="50vw" class="rounded-circle foto-perfil-jogadores">
+     <div class="d-flex col-12 col-md-4 align-items-center flex-column bd-highlight">
+       <div class="row  p-2 bd-highligh justify-content-center foto-perfil-jogadores m-0" style="background-image: url('/images/midias/<%=seguido.Jogador.path%>');">
        </div>
  
-       <div class="row justify-content-center">
-         <a href="/perfilJogador/<%=seguido.Jogador.id%>">
+       <div class="row p-2 bd-highligh justify-content-center">
+         <a class="font-130" href="/perfilJogador/<%=seguido.Jogador.id%>">
            <% nomeJogador = seguido.Jogador.nome.split(" ") %>
            <%= nomeJogador[0] %>
          </a>
@@ -59,24 +57,23 @@
  </div>
  <% } %>
 
-<!--Div do grado dos jogadores destaque-->
+<!--Div do grado dos times destaque-->
 <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mb-3 pb-3 px-4">
-  <div class="mt-2">
-    <h5 class="text-center">Times</h5>
+  <div class="mt-2 text-center">
+    <h5 class="text-center-titulo">Times</h5>
   </div>
   <!--Divi das fotos dos jogadores-->
-  <div class="row mt-3">
+  <div class="row mt-3 justify-content-around">
     <% console.log(times) %>
     <% if(times != undefined) { for(let x of times) { let file = x.MidiasTimes[0].path; %>
     <%# for(let x of jogadores) { %>
     <%# if (x.id!=jogador.id){ %>
-    <div class="col-sm-4 justify-content-center mb-2">
-      <div class="row justify-content-center">
-        <img src="/images/midias/<%= file %>"  width="50vw" class="rounded-circle foto-perfil-jogadores">
+    <div class="d-flex col-12 col-md-4 align-items-center flex-column bd-highlight">
+      <div class="row  p-2 bd-highligh justify-content-center foto-perfil-jogadores m-0" style="background-image: url('/images/midias/<%= file %>');">
       </div>
 
-      <div class="row justify-content-center">
-        <a href="/time/exibir/<%=x.id%>">
+      <div class="row p-2 bd-highligh justify-content-center">
+        <a class="font-130" href="/time/exibir/<%=x.id%>">
           <% nomeTime = x.nome.split(" ") %>
           <%= nomeTime[0] %>
         </a>
