link para perfil do jogador quando clica no nome

--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -45,7 +45,7 @@
             </div>
 
             <div class=" d-flex-column align-items-center col-sm-6 pl-2">
-              <a href="">
+              <a href="/perfilJogador/<%=publication.Jogador.id%>">
                 <h6 class="text-1 my-1 titulo-header-card"><%=publication.Jogador.nome%></h6>
               </a>
               <!-- usei o moment para formatar data que foi postada foto  -->
