--- a/v02/peNoChao/views/cadastroTimes.ejs
+++ b/v02/peNoChao/views/cadastroTimes.ejs
@@ -28,7 +28,7 @@
               <div class="mt-3 mx-5 px-5 alinhamento">
                 <form action="/time/cadastro" method="POST" enctype="multipart/form-data">
 
-                  <input type="text" id="idCapitao" name="idCapitao" value="" readonly class="d-none">
+                  <input type="text" id="idCapitao" name="idCapitao" value="<%= idCapitao %>" readonly class="d-none">
 
                   <label for="nome">  Nome do time: </label>
                   <input type="text" id="nome" name="nome" >
