Link para times e collapse aberto

--- a/v02/peNoChao/views/times.ejs
+++ b/v02/peNoChao/views/times.ejs
@@ -45,7 +45,7 @@
             
         </div>
         
-        <div id="<%= time.id %>" class="collapse" >
+        <div id="<%= time.id %>" class="collapse show" >
             <div class=" text-center border-light  ">
                 <table class="table table-borderless  my-1  " id="tabela">
                     <tbody class="my-1">
