Implementando a barra de pesquisa

--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -12,7 +12,7 @@
         <div class="col-sm-6 px-0">
           <form action="/pesquisa" method="GET" class="form-inline justify-content-center">
             <input class="form-control border-info rounded-pill col-sm-12" type="search" placeholder="Pesquisar"
-              aria-label="Search" id="buscaHeader">
+              aria-label="Search" id="buscaHeader" name="pesquisa">
             <button type="submit" class="d-none" ><img src="/images/lupaPesquisa.png" alt="" width="10vw"></button>
           </form>
         </div> 
