--- a/v02/peNoChao/views/bola-fora.ejs
+++ b/v02/peNoChao/views/bola-fora.ejs
@@ -5,6 +5,8 @@
     <title>Pagina não encontrada</title>
 </head>
 <body>
+    <!--Cabeçalho-->
+    <%- include('partials/headerLogada') %> 
     <img src="/images/bolaFora.jpg" alt="">
 </body>
 </html>
