--- a/v02/peNoChao/views/bola-fora.ejs
+++ b/v02/peNoChao/views/bola-fora.ejs
@@ -7,6 +7,11 @@
 <body>
     <!--Cabeçalho-->
     <%- include('partials/headerLogada') %> 
-    <img src="/images/bolaFora.jpg" alt="">
+
+    <main class="container">
+        <div class="row mt-3 mb-3 justify-content-center">
+            <img src="/images/bolaFora.jpg" alt="">
+        </div>
+    </main>
 </body>
 </html>
