projeto quase final

--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -18,17 +18,20 @@
         </div> 
           <div class="col d-flex justify-content-center icon-penochao-mobile-fixed" >
             <div class="col px-0 d-flex justify-content-center">
-              <a class="navbar-brand mx-0 py-0" href="#">
-                <img src="/images/notificacoes.png" alt="Notificações" id="imgNotificacoes">
+              <a title="Listar Times" class="navbar-brand mx-0 py-0" href="/times">
+                <img src="/images/escudo.png" alt="Notificações" id="imgNotificacoes">
               </a>
             </div>
-            <div class="col px-0 d-flex justify-content-center">
+            <!--
+              <div class="col px-0 d-flex justify-content-center">
               <a class="navbar-brand mx-0 py-0" href="#">
                 <img src="/images/Notificacoes2.png" alt="" id="imgNotificacoes">
               </a>
             </div>
+            -->
+            
             <div class="col px-0 d-flex justify-content-center">
-              <a class="navbar-brand mx-0 py-0   " href="/sair"  >
+              <a title="Sair" class="navbar-brand mx-0 py-0   " href="/sair"  >
                 <img src="/images/sair.png"  alt="SAIR" id="imgNotificacoes">
               </a>
             </div>
