--- a/v02/peNoChao/views/perfilJogadorFeed.ejs
+++ b/v02/peNoChao/views/perfilJogadorFeed.ejs
@@ -1,11 +1,12 @@
 <div class="col-sm-6 col-feed">
   <div class="container bg-feed border border-penochao-mobile rounded-top-penochao rounded-bottom-penochao">
     <!-- Começo do card feed  -->
+    <% console.log( "==========================================================="); console.log(publications)%> 
     <% if (publications) { %>
     <!-- verifica se tem alguma postagem se ao tiver nao entra na condicao-->
     <% publications.reverse(); publications.forEach(publication => { %>
     <% if (publication.jogadores_id == jogador.id) { %>
-
+    
     <!-- pela array puplication passa pelo reverse() para trocar orgem do arry antes de passar para forEach-->
     <div class="row m-0 my-2 bg-white mb-4 rounded-penochao" id="publicacao-<%=publication.id%>">
       <div class="col-12 p-0  ">
