--- a/v02/peNoChao/views/times.ejs
+++ b/v02/peNoChao/views/times.ejs
@@ -51,7 +51,7 @@
                     <tbody class="my-1">
                         <% let ocultar = ""; if(capitao.times_id) { ocultar = "d-none" ;console.log("É capitao");  } else { console.log("Não é capitao")} %>
                         <tr class="<%= ocultar %>">                            
-                            <td scope="row"><a href="times/<%=time.id %>/ingressar">Jogar pelo time</a></td> 
+                            <td scope="row"><a href="/times/<%=time.id %>/ingressar">Jogar pelo time</a></td> 
                         </tr>
                         <tr >
                             <td scope="row " ><h6 class="textTabela">Nº</h6> </td>
