--- a/v02/peNoChao/views/perfilJogadorResultados.ejs
+++ b/v02/peNoChao/views/perfilJogadorResultados.ejs
@@ -12,7 +12,7 @@
     <a href="/time/exibir/<%= meuTime.id %>">
     <div class="mt-2">
       <% jogador.nome = jogador.nome.split(" ") %>
-      <h5 class="text-center" style="color:black"><%= jogador.nome[0] %> joga no time</h5>
+      <h5 class="text-center" style="color:black"; font-size: 100%;>Este Time pertence a <%= jogador.nome[0] %></h5>
     </div>
     <!--Divi das escudo do meu Time-->
     <div class="row mt-3">
@@ -64,7 +64,7 @@
   </div>
   <!--Divi das fotos dos jogadores-->
   <div class="row mt-3 justify-content-around">
-    <% console.log(times) %>
+    <%# console.log(times) %>
     <% if(times != undefined) { for(let x of times) { let file = x.MidiasTimes[0].path; %>
     <%# for(let x of jogadores) { %>
     <%# if (x.id!=jogador.id){ %>
